Preparing to get structure ready
- Agile meetings file
- Folder structure (will probably change again)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-database-data
+node_modules
+.DS_Store
 .env
 
-
+database-data
 database/docker-composer/*
 !database/docker-composer/docker-compose.yml
