--- a/database/docker-composer/docker-compose.yml
+++ b/database/docker-composer/docker-compose.yml
@@ -1,7 +1,15 @@
 version: '3'
+
+# Create Network for DB
+networks:
+    mongo-network:
+        name: mongo-network
+
 services:
+    # MongoDB Service
     mongo:
         image: mongo:latest
+        container_name: mongo
         ports:
             - 27017:27017
         networks:
@@ -9,14 +17,16 @@ services:
         restart: always
         environment:
             - MONGO_INITDB_ROOT_USERNAME=root
-            - MONGO_INITDB_ROOT_PASSWORD=1234
+            - MONGO_INITDB_ROOT_PASSWORD=demacia
         volumes:
             - './data:/data/db'
 
+    # Mongoose MongoShell Service
     mongo-express:
         image: mongo-express:latest
+        container_name: mongo-express
         ports:
-            - 8080:8081
+            - 8081:8081
         restart: always
         depends_on:
             - mongo
@@ -27,8 +37,5 @@ services:
         environment:
             - ME_CONFIG_MONGODB_SERVER=mongo
             - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-            - ME_CONFIG_MONGODB_ADMINPASSWORD=1234
-            - ME_CONFIG_MONGODB_URL=mongodb://root:1234@mongo:27017/
-networks:
-    mongo-network:
-        name: mongo-network
+            - ME_CONFIG_MONGODB_ADMINPASSWORD=demacia
+            - ME_CONFIG_MONGODB_URL=mongodb://root:demacia@mongo:27017/
