Most of the pre CI/CD Setup done. All working on local machine.
- Database working
- API Serving Frontend as functions => Might change or not, depending on impact of that. (For clarification => API's should work as API's routes.)
- Merge with frontend preparations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# noise files
+Dockerfile-backup
+
 # security
 .env
-# .dockerignore
-
+.env.local
+.env*.local
 
 # dependencies
 /node_modules
