--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,6 @@ services:
         networks:
             - zenergy-network
         restart: always
-
         environment:
             - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
             - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
@@ -28,68 +27,19 @@ services:
             - MONGODB_URI=${MONGODB_URI}
             - MONGO_USER=${MONGO_USER}
             - MONGO_PASS=${MONGO_PASS}
-
         volumes:
             - 'zenergy:/data/db'
             - './mongoinit.sh/:/docker-entrypoint-initdb.d/mongoinit.sh:ro'
 
+    # Next JS Web Service
     web:
         container_name: web
         depends_on:
             - mongo
-
         build:
             context: .
             dockerfile: Dockerfile
-
         networks:
             - zenergy-network
-
         ports:
             - 3000:3000
-
-    develop:
-        watch:
-            - action: rebuild
-              path: ./package.json
-
-            - action: rebuild
-              path: ./package-lock.json
-
-            - action: rebuild
-              path: ./next.config.js
-
-            - action: rebuild
-              path: ./docker-compose.yml
-
-    #         - action: rebuild
-    #           path: ./src
-
-    #         # Does not work. That's a new feature that's been figured out
-    #         - action: sync
-    #           path: '.'
-    #           target: ./src
-    #           ignore:
-    #               - node_modules/
-
-    # Mongoose MongoShell Service (Not being uset atm)
-
-    # mongo-express:
-    #     image: mongo-express:latest
-    #     container_name: mongo-express
-
-    #     ports:
-    #         - 8081:8081
-
-    #     restart: always
-
-    #     depends_on:
-    #         - mongo
-    #     networks:
-    #         - zenergy-network
-
-    #     environment:
-    #         - ME_CONFIG_MONGODB_SERVER=mongo
-    #         - ME_CONFIG_MONGODB_ADMINUSERNAME=
-    #         - ME_CONFIG_MONGODB_ADMINPASSWORD=
-    #         - ME_CONFIG_MONGODB_URL=mongodb://pass:1234@mongo:27017/
