--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,7 @@ services:
     web:
         container_name: web
         depends_on:
-            mongo:
-                condition: service_completed_successfully
+            - mongo
         build:
             context: .
             dockerfile: Dockerfile
