--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "z-energy",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -13,6 +14,7 @@
         "@heroicons/react": "^2.1.3",
         "classnames": "^2.5.1",
         "clsx": "^2.1.0",
+        "dotenv": "^16.4.5",
         "mongodb": "^6.5.0",
         "next": "14.1.4",
         "react": "^18",
@@ -27,7 +29,9 @@
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.1.4",
+        "fs": "^0.0.1-security",
         "postcss": "^8",
+        "prompt-sync": "^4.2.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
     }
