--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.3",
     "classnames": "^2.5.1",
@@ -19,6 +20,7 @@
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.55.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
