--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/reports"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "src/app/api/reports",
+        "src/app/_context/mapContext.js"
+    ],
     "exclude": ["node_modules"]
 }
